--- a/src/main/resources/startScreen2.fxml
+++ b/src/main/resources/startScreen2.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -35,17 +36,37 @@
                <center>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
+                        <Button fx:id="deleteReservationButton" mnemonicParsing="false" onAction="#deleteReservation" text="Poista varaus">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="findCabinButton" mnemonicParsing="false" onAction="#findCabins" text="Etsi mökkejä">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
                         <Button fx:id="reservationButton" mnemonicParsing="false" onAction="#newReservation" text="Uusi varaus">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="invoiceButton" mnemonicParsing="false" onAction="#manageInvoice" text="Laskutus">
+                        <Button fx:id="invoiceManageButton" mnemonicParsing="false" onAction="#manageInvoice" text="Laskujen hallinta">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="reportButton" mnemonicParsing="false" onAction="#seeReports" text="Raportit">
+                        <Button fx:id="invoiceTrackingButton" mnemonicParsing="false" onAction="#trackInvoice" text="Laskujen seuranta">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="reportSleepButton" mnemonicParsing="false" onAction="#seeAccommodationReports" text="Majoitusten raportit">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="reportServiceButton" mnemonicParsing="false" onAction="#seeServiceReports" text="Palveluiden raportit">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
@@ -75,4 +96,7 @@
          </children>
       </VBox>
    </center>
+   <bottom>
+      <TextArea prefHeight="476.0" prefWidth="1268.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
