--- a/src/main/resources/poistaVaraus.fxml
+++ b/src/main/resources/poistaVaraus.fxml
@@ -7,18 +7,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
       <Label layoutX="39.0" layoutY="29.0" text="Anna asiakkaan nimi:">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="211.0" layoutY="81.0" text="Sukunimi" />
-      <TextField layoutX="39.0" layoutY="81.0" text="Etunimi" />
-      <Button layoutX="39.0" layoutY="129.0" mnemonicParsing="false" text="Etsi varaukset" />
+      <TextField layoutX="211.0" layoutY="81.0" promptText="Sukunimi" />
+      <TextField layoutX="39.0" layoutY="81.0" promptText="Etunimi" />
+      <Button fx:id="findReservationButton" layoutX="39.0" layoutY="129.0" mnemonicParsing="false" onAction="#findReservations" text="Etsi varaukset" />
       <ListView layoutX="39.0" layoutY="186.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button layoutX="39.0" layoutY="412.0" mnemonicParsing="false" text="Poista varaus" />
+      <Button fx:id="deleteReservationButton" layoutX="39.0" layoutY="412.0" mnemonicParsing="false" onAction="#deleteThisReservation" text="Poista varaus" />
    </children>
 </AnchorPane>
