--- a/src/main/resources/palveluidenHallinta.fxml
+++ b/src/main/resources/palveluidenHallinta.fxml
@@ -12,9 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="oma.grafiikka.ot1.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8ebaf" height="685.0" layoutX="485.0" layoutY="18.0" strokeType="INSIDE" width="383.0">
          <stroke>
