--- a/src/main/resources/alueidenHallinta.fxml
+++ b/src/main/resources/alueidenHallinta.fxml
@@ -14,7 +14,6 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <ListView fx:id="areaListView" layoutX="523.0" layoutY="103.0" prefHeight="236.0" prefWidth="232.0" />
       <Button fx:id="deleteAreaButton" layoutX="523.0" layoutY="366.0" mnemonicParsing="false" onAction="#deleteArea" text="Poista" />
       <TextField fx:id="addAreaTextField" layoutX="62.0" layoutY="103.0" promptText="Alue" />
       <Label layoutX="62.0" layoutY="51.0" text="Lisää alue">
@@ -23,5 +22,6 @@
          </font>
       </Label>
       <Button fx:id="addAreaButton" layoutX="62.0" layoutY="150.0" mnemonicParsing="false" onAction="#addNewArea" text="Lisää" />
+      <ListView fx:id="areaListViewNew" layoutX="523.0" layoutY="86.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
