--- a/src/main/resources/palveluidenHallinta.fxml
+++ b/src/main/resources/palveluidenHallinta.fxml
@@ -6,48 +6,10 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8ebaf" height="685.0" layoutX="485.0" layoutY="18.0" strokeType="INSIDE" width="383.0">
-         <stroke>
-            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </RadialGradient>
-         </stroke></Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8ebaf" height="685.0" layoutX="20.0" layoutY="20.0" strokeType="INSIDE" width="408.0">
-         <stroke>
-            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </RadialGradient>
-         </stroke></Rectangle>
       <Label layoutX="44.0" layoutY="25.0" text="Hae palveluita alueelta">
          <font>
             <Font size="24.0" />
@@ -63,7 +25,7 @@
          </font>
       </Label>
       <TextField layoutX="539.0" layoutY="404.0" promptText="Uuden palvelun nimi" />
-      <ListView layoutX="530.0" layoutY="85.0" prefHeight="219.0" prefWidth="246.0" />
+      <ListView fx:id="areaListView" layoutX="530.0" layoutY="85.0" prefHeight="219.0" prefWidth="246.0" />
       <TextArea editable="false" layoutX="212.0" layoutY="118.0" prefHeight="227.0" prefWidth="196.0" />
       <Label layoutX="212.0" layoutY="91.0" text="Palvelun tiedot">
          <font>
@@ -90,5 +52,6 @@
       <TextField layoutX="43.0" layoutY="583.0" promptText="Uuden palvelun alv" />
       <TextField layoutX="43.0" layoutY="503.0" promptText="Uuden palvelun kuvaus" />
       <Button fx:id="alterServiceButton" layoutX="43.0" layoutY="629.0" mnemonicParsing="false" onAction="#alterServiceInfo" text="Muokkaa tietoja" />
+      <Button fx:id="haeAlueetPalveluidenHallinnassaButton" layoutX="530.0" layoutY="311.0" mnemonicParsing="false" onAction="#haeAlueetPalveluidenHallinnassa" text="Hae alueet" />
    </children>
 </AnchorPane>
