--- a/src/main/resources/palveluidenHallinta.fxml
+++ b/src/main/resources/palveluidenHallinta.fxml
@@ -25,7 +25,7 @@
          </font>
       </Label>
       <TextField layoutX="539.0" layoutY="404.0" promptText="Uuden palvelun nimi" />
-      <ListView fx:id="areaListView" layoutX="530.0" layoutY="85.0" prefHeight="219.0" prefWidth="246.0" />
+      <ListView fx:id="areaListViewService" layoutX="530.0" layoutY="85.0" prefHeight="219.0" prefWidth="246.0" />
       <TextArea editable="false" layoutX="212.0" layoutY="118.0" prefHeight="227.0" prefWidth="196.0" />
       <Label layoutX="212.0" layoutY="91.0" text="Palvelun tiedot">
          <font>
