--- a/src/main/resources/palveluidenHallinta.fxml
+++ b/src/main/resources/palveluidenHallinta.fxml
@@ -16,7 +16,7 @@
          </font>
       </Label>
       <ListView fx:id="palvelutListView" layoutX="41.0" layoutY="118.0" prefHeight="227.0" prefWidth="158.0" />
-      <TextField fx:id="haeAlueTextField" layoutX="41.0" layoutY="79.0" onAction="#haeAluePalveluaVarten" prefHeight="25.0" prefWidth="120.0" promptText="Alue" />
+      <TextField fx:id="haeAlueTextField" layoutX="41.0" layoutY="79.0" prefHeight="25.0" prefWidth="120.0" promptText="Alue" />
       <Button fx:id="areaServiceButton" layoutX="161.0" layoutY="79.0" mnemonicParsing="false" onAction="#areaServiceFetch" text="Hae" />
       <Button fx:id="deleteArealServiceButton" layoutX="41.0" layoutY="350.0" mnemonicParsing="false" onAction="#deleteServiceFromArea" text="Poista palvelu alueelta" />
       <Label layoutX="539.0" layoutY="33.0" text="Lisää uusi palvelu alueelle">
@@ -26,7 +26,7 @@
       </Label>
       <TextField layoutX="539.0" layoutY="404.0" promptText="Uuden palvelun nimi" />
       <ListView fx:id="areaListViewService" layoutX="530.0" layoutY="85.0" prefHeight="219.0" prefWidth="246.0" />
-      <TextArea editable="false" layoutX="212.0" layoutY="118.0" prefHeight="227.0" prefWidth="196.0" />
+      <TextArea fx:id="palvelunTiedotTextArea" editable="false" layoutX="212.0" layoutY="118.0" prefHeight="227.0" prefWidth="196.0" />
       <Label layoutX="212.0" layoutY="91.0" text="Palvelun tiedot">
          <font>
             <Font size="18.0" />
