--- a/src/main/resources/mokkienHallinta.fxml
+++ b/src/main/resources/mokkienHallinta.fxml
@@ -28,7 +28,7 @@
          </font>
       </Label>
       <Button fx:id="addNewCabinButton" layoutX="36.0" layoutY="236.0" mnemonicParsing="false" onAction="#addNewCabin" text="Syötä" />
-      <ListView fx:id="jarjestelmanMokit" layoutX="36.0" layoutY="325.0" prefHeight="221.0" prefWidth="254.0" />
+      <ListView fx:id="jarjestelmanMokit" layoutX="36.0" layoutY="325.0" prefHeight="221.0" onMouseClicked="#mokinTiedotTextFieldiin" prefWidth="254.0" />
       <Button fx:id="deleteCabinButton" layoutX="36.0" layoutY="572.0" mnemonicParsing="false" onAction="#deleteCabin" text="Poista valittu mökki" />
       <Label layoutX="363.0" layoutY="273.0" text="Voit halutessasi muokata valittun mökin tietoja">
          <font>
