Toiminnon onnistumisesta ikkuna-metodi ja lisättiin listview sekä textarea etsi mökkejä osioon.

--- a/src/main/resources/startScreen2.fxml
+++ b/src/main/resources/startScreen2.fxml
@@ -101,6 +101,6 @@
       </VBox>
    </center>
    <bottom>
-      <TextArea prefHeight="476.0" prefWidth="1268.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="valittuMokkiTextArea" prefHeight="476.0" prefWidth="1268.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
