--- a/src/main/resources/etsiMokkeja.fxml
+++ b/src/main/resources/etsiMokkeja.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oma.grafiikka.ot1.Controller">
    <children>
-      <Label layoutX="45.0" layoutY="27.0" text="Syötä seuraavat tiedot löytääksesi mökin:">
+      <Label layoutX="38.0" layoutY="41.0" text="Syötä seuraavat tiedot löytääksesi mökin:">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
       <DatePicker fx:id="AlkuPvm" layoutX="38.0" layoutY="93.0" promptText="Alku pvm" />
@@ -32,5 +33,17 @@
       </Label>
       <ListView fx:id="palveluLV" layoutX="38.0" layoutY="299.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="findCabinButton" layoutX="38.0" layoutY="550.0" mnemonicParsing="false" onAction="#findThisCabin" text="Etsi" />
+      <Label layoutX="506.0" layoutY="41.0" text="Valitse mökki listalta">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ListView layoutX="506.0" layoutY="93.0" prefHeight="225.0" prefWidth="238.0" />
+      <Label layoutX="506.0" layoutY="350.0" text="Mökin tiedot">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TextArea layoutX="506.0" layoutY="399.0" prefHeight="225.0" prefWidth="238.0" />
    </children>
 </AnchorPane>
