--- a/src/main/resources/uusiVaraus.fxml
+++ b/src/main/resources/uusiVaraus.fxml
@@ -14,15 +14,15 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="36.0" layoutY="77.0" promptText="Etunimi" />
-      <TextField layoutX="205.0" layoutY="77.0" promptText="Sukunimi" />
-      <TextField layoutX="36.0" layoutY="118.0" promptText="Puhelinnumero" />
+      <TextField fx:id="haeVarausAsEnimi" layoutX="36.0" layoutY="77.0" promptText="Etunimi" />
+      <TextField fx:id="haeVarausAsSnimi" layoutX="205.0" layoutY="77.0" promptText="Sukunimi" />
+      <TextField fx:id="haeVarausAsPuhnro" layoutX="36.0" layoutY="118.0" promptText="Puhelinnumero" />
       <Label layoutX="36.0" layoutY="157.0" prefHeight="71.0" prefWidth="322.0" text="Olet varaamassa mökkiä tälle asiakkaalle:" wrapText="true">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextArea layoutX="36.0" layoutY="236.0" prefHeight="133.0" prefWidth="176.0" />
+      <TextArea fx:id="asiakastiedotVaraus" layoutX="36.0" layoutY="236.0" prefHeight="133.0" prefWidth="176.0" />
       <Button fx:id="reservationButton" layoutX="38.0" layoutY="385.0" mnemonicParsing="false" onAction="#makeReservation" text="Tee varaus" />
       <Label layoutX="450.0" layoutY="30.0" text="Olet varaamassa seuraavaa mökkiä:">
          <font>
@@ -30,6 +30,6 @@
          </font>
       </Label>
       <TextArea editable="false" layoutX="450.0" layoutY="89.0" prefHeight="427.0" prefWidth="374.0" />
-      <Button layoutX="205.0" layoutY="118.0" mnemonicParsing="false" text="Hae" />
+      <Button fx:id="varausHaeAs" layoutX="205.0" layoutY="118.0" mnemonicParsing="false" onAction="#haeAs" text="Hae" />
    </children>
 </AnchorPane>
